<resources>
    <string name="app_name">AndroidWaterMeter</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="staff_id">Staff ID</string>
    <string name="emailCreateAccount">Email</string>
    <string name="passwordCreateAccount">Password</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="st001">ST001</string>
    <string name="example_email_com">example.email.com</string>
    <string name="go_back_to_login">Go Back To Login</string>
    <string name="create_account_label">Create Account</string>
    <string name="password_create_account">Password</string>
</resources>